# eostre

./: .dockerignore  .gitignore  LICENSE  README.md  changes.md  docker-compose.yml  entities.drawio  export-locals.ps1  export_locals.sh
adminserver/: .dockerignore  Dockerfile  Pipfile  README.md  adminserver.db  config.py  docker-compose.yml  populate_db.py  pyproject.toml  pytest.ini
adminserver/migrations/: env.py
adminserver/migrations/versions/: 90027ec7471c_restart_migration_post_tokenevent_.py  951b7566e320_initial_uuid_pks.py
adminserver/src/: app.py  db.py
adminserver/src/api/: __init__.py  routes.py
adminserver/src/api/v1/: __init__.py  account.py  email.py  grants.py  roles.py  routes.py  user.py
adminserver/src/api/v1/account/: __init__.py  account_base.py  account_user.py
adminserver/src/auth/: auth.py  routes.py
adminserver/src/db/: README.md
adminserver/src/models/: models.py
adminserver/src/services/: auth_manager.py  schema.py  smtp_handler.py
adminserver/src/templates/emails/: base_email.html  email_validation.html  text_content.json
adminserver/tests/: conftest.py  test_api.py  test_auth_manager.py  test_auth_routes.py
eostre_ui/: Dockerfile  README.md  _next.config.ts  next.config.js  next.config.ts  package-lock.json  package.json  postcss.config.mjs  (+2 more)
locationserv/: Dockerfile  README.md  config.py  docker-compose.yml  pipfile  pyproject.toml
locationserv/src/: app.py  db.py  helpers.py  models.py  routes.py  token_manager.py
locationserv/tests/: async_mongomock.py  conftest.py  test_models.py  test_routes.py
(+25 files in other folders)
