[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adminserver"
description = "Administrative server for user, account, roles, permissions"
version = "0.0.1"

requires-python = ">=3.13"
dependencies = [
    "quart",
    "Hypercorn",
    "werkzeug<3.0.0",
    "quart-sqlalchemy",
    "SQLAlchemy",
    "quart-auth",
    "PyJWT[crypto]",
    "cryptography",
    "aiosqlite",
    "quart-schema",
    "pydantic",
    "quart_cors"
]

[project.optional-dependencies]
test = ["alembic","pytest", "pytest-mock", "requests", "pytest-asyncio", "httpsx"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
